More fixes for upstream changes in spotifyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compmus_long_distance)
 export(compmus_normalise)
 export(compmus_self_similarity)
 export(compmus_summarise)
+export(get_playlist_audio_features)
 export(get_tidy_audio_analysis)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
