--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,12 @@ LazyData: true
 Imports:
     dplyr (>= 0.7),
     forcats (>= 0.3),
+    httr (>= 1.4),
     magrittr (>= 1.5),
     purrr (>= 0.3),
     rlang (>= 0.3),
     spotifyr (>= 1.1),
+    stringr (>= 1.4),
     tibble (>= 2.0),
     tidyr (>= 0.8)
 Suggests: 
