--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,6 +7,7 @@ reference:
     desc: ~
     contents:
       - '`get_tidy_audio_analysis`'
+      - '`get_playlist_audio_features`'
   - title: Norms and Distances
     desc: ~
     contents:
