--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,4 +5,5 @@ articles:
   compmus-w08: compmus-w08.html
   compmus-w09: compmus-w09.html
   compmus-w10: compmus-w10.html
+  compmus-w11: compmus-w11.html
 
