--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: compmus
 Type: Package
 Title: Support Functions for Computational Musicology
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: person(
                c('John', 'Ashley'), 'Burgoyne', 
                email = 'j.a.burgoyne@uva.nl', 
@@ -23,7 +23,9 @@ Imports:
     tibble (>= 2.0),
     tidyr (>= 0.8)
 Suggests: 
+    ggdendro,
     knitr,
+    protoclust,
     rmarkdown,
     tidymodels,
     tidyverse
