Fixed missing vignette

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,4 +6,5 @@ articles:
   compmus-w09: compmus-w09.html
   compmus-w10: compmus-w10.html
   compmus-w11: compmus-w11.html
+  compmus-w12: compmus-w12.html
 
