--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(compmus_summarise)
 export(compmus_summarize)
 export(get_playlist_audio_features)
 export(get_tidy_audio_analysis)
+export(tempogram)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
