--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: compmus
 Type: Package
 Title: Support Functions for Computational Musicology
-Version: 0.0.0.9003
+Version: 0.0.0.9004
 Authors@R: person(
                c('John', 'Ashley'), 'Burgoyne', 
                email = 'j.a.burgoyne@uva.nl', 
@@ -12,12 +12,14 @@ License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    assertthat (>= 0.2),
     dplyr (>= 0.7),
     forcats (>= 0.3),
     httr (>= 1.4),
     magrittr (>= 1.5),
     purrr (>= 0.3),
     rlang (>= 0.3),
+    signal (>= 0.7),
     spotifyr (>= 1.1),
     stringr (>= 1.4),
     tibble (>= 2.0),
