--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,6 +9,7 @@ reference:
       - '`get_tidy_audio_analysis`'
       - '`add_audio_analysis`'
       - '`get_playlist_audio_features`'
+      - '`tempogram`'
   - title: Norms and Distances
     desc: ~
     contents:
