--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: 2.11.2
-pkgdown: 1.6.1
+pandoc: '3.1'
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   compmus-w08: compmus-w08.html
@@ -7,5 +7,5 @@ articles:
   compmus-w10: compmus-w10.html
   compmus-w11: compmus-w11.html
   compmus-w12: compmus-w12.html
-last_built: 2021-03-02T23:12Z
+last_built: 2023-02-21T22:43Z
 
