--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Imports:
     assertthat (>= 0.2),
     dplyr (>= 1.1),
     forcats (>= 1.0),
+    furrr,
+    ggpubr,
     httr (>= 1.4),
     magrittr (>= 2.0),
     purrr (>= 1.0),
