--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,11 +1,5 @@
-pandoc: '3.1'
-pkgdown: 2.0.7
+pandoc: 3.6.3
+pkgdown: 2.2.0
 pkgdown_sha: ~
-articles:
-  compmus-w08: compmus-w08.html
-  compmus-w09: compmus-w09.html
-  compmus-w10: compmus-w10.html
-  compmus-w11: compmus-w11.html
-  compmus-w12: compmus-w12.html
-last_built: 2023-02-21T23:23Z
-
+articles: {}
+last_built: 2026-02-18T12:55Z
