--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compmus_normalise)
 export(compmus_normalize)
 export(compmus_self_similarity)
 export(compmus_wrangle_chroma)
+export(compmus_wrangle_timbre)
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
 importFrom(stats,cor)
